welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: too many arguments for method droite: ()Unit
  droite(2)
        ^DwarfCode:13: error: too many arguments for method droite: ()Unit
  droite(2)
        ^